# nu-pywal

./: .bandit  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  INSTALLATION.md  PKGBUILD  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs-check.yml  release.yml
pywal/: __main__.py  cache.py  colors.py  config.py  export.py  image.py  parallel.py  reload.py  settings.py  util.py  wallpaper.py
pywal/backends/: schemer2.py
pywal/scripts/: gtk_reload.py
pywal/templates/: colors-ghostty
tests/: test_backends.py  test_cache.py  test_config.py  test_parallel.py  test_util.py
